# -Smart-Health-Fitness-Chatbot

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
data/: app.db
static/: app.js  style.css
templates/: index.html
